force-app/main/default/objects/Pratiksha_Friends__c/Pratiksha_Friends__c.object-meta.xml
<CustomObject>
    <label>Pratiksha Friends</label>
    <pluralLabel>Pratiksha Friendss</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Pratiksha Friends Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>