force-app/main/default/objects/Pratiksha_Friends__c/fields/Friend_Number__c.field-meta.xml
<CustomField>
    <fullName>Friend_Number__c</fullName>
    <label>Friend Number</label>
    <type>AutoNumber</type>
    <displayFormat>AUTO-{0000}</displayFormat>
    <startingNumber>1</startingNumber>
</CustomField>