force-app/main/default/objects/Pratiksha_Friends__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buddu</fullName>
            </value>
            <value>
                <fullName>Smart</fullName>
            </value>
            <value>
                <fullName>Tejas level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>