force-app/main/default/objects/Pratiksha_Friends__c/fields/Worth__c.field-meta.xml
<CustomField>
    <fullName>Worth__c</fullName>
    <label>Worth</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>